<resources>
    <string name="app_name">CutPastePhoto</string>
    <string name="text">空山新雨后，天气晚来秋。明月松间照，清泉石上流。竹喧归浣女，莲动下渔舟。随意春芳歇，王孙自可留。</string>
    <string name="Backgrounds">Backgrounds</string>
    <string name="Foregrounds">Foregrounds</string>
    <string name="Stickers">Stickers</string>
    <string name="Cancel">Cancel</string>
    <string name="Done">Done</string>
    <string name="SampleText">Sample Text</string>
    <string name="Keyboard">Keyboard</string>
    <string name="Color">Color</string>
    <string name="HelpSettings">HELP &amp; SETTINGS</string>
    <string name="Store">Store</string>
    <string name="Help">Help</string>
    <string name="TellAFriend">Tell a Friend</string>
    <string name="ContactUs">Contact us</string>
    <string name="ShareApp">Share App</string>
    <string name="RateUs">Rate us</string>
    <string name="Font">Font</string>
    <string name="FollowUs">FOLLOW US</string>
    <string name="Facebook">Facebook</string>
    <string name="Twitter">Twitter</string>
    <string name="Instagram">Instagram</string>
    <string name="LinkedIn">LinkedIn</string>
    <string name="TellAFriendMessage">I find this app very helpful. I think you may like it too! Check it out:</string>
    <string name="AppLink">App Link</string>
    <string name="CutPastePhoto">Cut Paste Photo</string>
    <string name="ContactUsTitle">Feedback for Cut Paste Photo</string>
    <string name="ContactUsBody">Compose your message here..</string>
    <string name="DeviceOS">Device OS: Android</string>
    <string name="version">Device OS version: </string>
    <string name="AppVersion">App Version: </string>
    <string name="DeviceBrand">Device Brand: </string>
    <string name="DeviceModel">Device Model: </string>
    <string name="DeviceManufacturer">Device Manufacturer:</string>
    <string name="Share">Share</string>
    <string name="SaveToAlbum">Save To Album</string>
    <string name="Filter">Filter</string>
    <string name="Blend">Blend</string>
    <string name="ShareURLMessage">Let me recommend you this application</string>
    <string name="CompanyName">Odyssey Apps Ltd.</string>
    <string name="Offset">Offset</string>
    <string name="Size">Size</string>

    <string name="Settings">Settings</string>
    <string name="AdvertisementsTitle">Advertisements and Offline Usages</string>
    <string name="TextFontsTitle">Text Fonts</string>
    <string name="TextColorsTitle">Text Colors</string>
    <string name="CropFrameTitle">Cropping Ratio</string>
    <string name="RemoveAdvertisements">Remove advertisements and offline usages</string>
    <string name="UnlockBackground">Unlock 100+ Unique Background Templates</string>
    <string name="UnlockStickers">Unlock 100+ Stunning Stickers</string>
    <string name="UnlockColors">Unlock 70+ Amazing Text Colors</string>
    <string name="UnlockFonts">Unlock 60+ Stylish Text Fonts</string>
    <string name="UnlockCropFrame">Unlock All Cropping Ratios</string>
    <string name="Restore">Restore</string>
    <string name="BuyPro">Buy</string>
    <string name="Crop">Crop</string>
    <string name="PHOTO_LIBRARY">PHOTO LIBRARY</string>
    <string name="CAMERA">CAMERA</string>

    <string name="PRO_VERSION">UPGRADE TO PRO</string>
    <string name="Apply">Apply</string>
    <string name="DeleteFromGallery">Delete From Gallery</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="AppExitMessage">Do you want to Exit?</string>
    <string name="NoInternetConnection">No Internet Connection!</string>
    <string name="OK">OK</string>
    <string name="NoInternetMessage">You have to be connected with internet data connection or you can use CutPaste in offline now and remove all the annoying advertisements forever by purchasing Advertisements and Offline Usages</string>
    <string name="NoForegroundAdded">No Foreground Added</string>
    <string name="CompleteActionUsing">Complete action using</string>
    <string name="ShareImage">Share Image</string>
    <string name="CropAndApply">Crop and Apply</string>
    <string name="SaveToForegroundGallery">Save to Foreground Gallery</string>
    <string name="SaveToPhotoAlbum">Save to Photo Album</string>
    <string name="RestoreToast">Your purchases have been restored.</string>
    <string name="SuccessfullySaveForegroundGallery">Successfully Saved to Foreground Gallery.</string>
    <string name="SuccessfullySavePhotoAlbum">Successfully Saved to Photo Album.</string>
    <string name="AreYouSureMsg">Are you sure you want to delete this image?</string>
    <string name="GoSettingsMsg">Need access to Photos and Storage\n
Let CutPastePhoto Access your Photos and Storage to create and save edited photos. You can always change your permission by going to Settings / Apps / CutPastePhoto / Permissions.</string>

    <string name="ChangeBG">Change Background</string>
    <string name="EditBG">Edit Background</string>
    <string name="MoreApps">More Apps</string>


    <string name="Eventbrite_Cover_Image">Eventbrite Cover Image</string>
    <string name="Etsy_Cover">Etsy Cover</string>
    <string name="Wattpad_Cover">Wattpad Cover</string>
    <string name="Youtube_Channel_Cover">Youtube Channel Cover</string>
    <string name="Youtube_Video_Thumbnail">Youtube Video Thumbnail</string>
    <string name="LinkedIn_Background">LinkedIn Background</string>
    <string name="LinkedIn_Post">LinkedIn Post</string>
    <string name="Pinterest_Pin">Pinterest Pin</string>
    <string name="Twitter_Header">Twitter Header</string>
    <string name="Twitter_Landscape">Twitter Post Landscape</string>
    <string name="Instagram_Landscape">Instagram Landscape Post</string>
    <string name="Instagram_Portrait">Instagram Portrait Post</string>
    <string name="Facebook_Event">Facebook Event Cover</string>
    <string name="Facebook_Profile">Facebook Profile Cover</string>
    <string name="Facebook_Cover_Mobile">Facebook Page Cover Mobile</string>
    <string name="Facebook_Cover_Desktop">Facebook Page Cover Desktop</string>
    <string name="Facebook_Portrait">Facebook Portrait Post</string>
    <string name="Facebook_Landscape">Facebook Landscape Post</string>
    <string name="square">square</string>
    <string name="original">original</string>

</resources>
