<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    tools:context="com.odyssey.apps.cutpastephoto.FilterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#efefef"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:srcCompat="@drawable/bg4" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:background="#fff"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--android:onClick="reset"-->

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="alhazmy_INVERT"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="applyBlackFilter"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray" />


            <!--android:onClick="testRemove"-->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="alhazmy_GRAY"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray" />


            <!--android:onClick="testRemoveAll"-->
            <TextView
                android:id="@+id/textView3"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="applySnowEffect"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray"/>


            <!--android:onClick="testLock"-->
            <TextView
                android:id="@+id/textView4"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="alhazmy_OLD"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray"/>


            <!--android:onClick="testAdd"-->
            <TextView
                android:id="@+id/textView5"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="applyReflection"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray" />


            <!--android:onClick="testAdd"-->
            <TextView
                android:id="@+id/textView6"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="alhazmy_BLOCK"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray" />


            <!--android:onClick="testAdd"-->
            <TextView
                android:id="@+id/textView7"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="alhazmy_NEON"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray" />


            <!--android:onClick="testAdd"-->
            <TextView
                android:id="@+id/textView8"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="alhazmy_SKETCH"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray" />


            <!--android:onClick="testAdd"-->
            <TextView
                android:id="@+id/textView9"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="alhazmy_GOTHAM"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray" />


            <TextView
                android:id="@+id/textView11"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="alhazmy_HDR"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray" />


            <TextView
                android:id="@+id/textView12"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="alhazmy_LOMO"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray" />


            <TextView
                android:id="@+id/textView13"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="alhazmy_TV"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray"/>


            <TextView
                android:id="@+id/textView14"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="alhazmy_RELIEF"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray"/>


            <TextView
                android:id="@+id/textView15"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="alhazmy_LIGHT"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray"/>


            <TextView
                android:id="@+id/textView16"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="alhazmy_SOFT_GLOW"
                android:scaleType="fitCenter"
                app:srcCompat="@android:color/darker_gray" />


        </LinearLayout>
    </HorizontalScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#fff"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <Button
        android:id="@+id/buttonCancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#fff"
        android:text="@string/Cancel"
        android:textColor="#4c4d4e"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--android:layout_marginStart="8dp"-->
    <Button
        android:id="@+id/buttonDone"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="#fff"
        android:text="@string/Done"
        android:textColor="#4c4d4e"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent" />
    <!--android:layout_marginEnd="8dp"-->

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/Filter"
        android:textColor="#4c4d4e"
        android:textSize="26sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCancel"
        app:layout_constraintEnd_toStartOf="@+id/buttonDone"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel" />

</android.support.constraint.ConstraintLayout>
